--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,14 @@
+/* globals */
+
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-color: #13151f;
+  color: #fff;
+  transition: all 0.3s;
 }
 
 a {
@@ -13,4 +18,129 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+.app {
+  margin: 28px;
+}
+
+.button {
+  font: inherit;
+  font-weight: bold;
+  background-color: #0aa1dd;
+  color: #fff;
+  outline: none;
+  border: none;
+  padding: 0.5rem;
+  border-radius: 0.3rem;
+  cursor: pointer;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+
+.button:hover {
+  transform: scale(1.1);
+}
+/* main video */
+
+.main-video {
+  width: 100%;
+  overflow: hidden;
+  position: relative;
+  margin-bottom: 50px;
+}
+
+.main-video img {
+  width: 100%;
+  aspect-ratio: 3;
+  object-fit: fill;
+}
+
+/* sections */
+
+.section .video-feed {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  gap: 1%;
+  overflow: scroll;
+}
+
+.section .video-feed .card {
+  flex-basis: 100%;
+  width: 19.4vw;
+  aspect-ratio: 16/9;
+  border-radius: 5%;
+  filter: drop-shadow(5px 5px 10px #000);
+}
+
+div::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera */
+}
+
+/* navigation bar */
+
+.navbar {
+  height: 80px;
+  width: 100%;
+  display: flex;
+}
+
+/* video */
+
+.video-image-container {
+  padding: 0;
+  position: relative;
+  background-color: transparent;
+}
+
+.video-image {
+  position: absolute;
+  top: 0;
+  cursor: pointer;
+  width: 100%;
+  overflow: hidden;
+  margin-bottom: 50px;
+  aspect-ratio: 2.8;
+  object-fit: fill;
+  filter: drop-shadow(5px 5px 10px #000);
+}
+
+.video-div {
+  outline: none;
+  aspect-ratio: 2.8;
+  position: relative;
+  margin-bottom: -0.8%;
+  object-fit: cover;
+}
+
+.video-info {
+  margin: 1% 2%;
+  max-width: 70%;
+}
+
+.video-info .video-tags {
+  color: #ccc;
+}
+
+.play-button {
+  width: auto;
+  height: auto;
+  position: relative;
+  margin: 14% 45%;
+}
+
+.play-button img {
+  cursor: pointer;
+}
+
+.play-button img:hover {
+  transform: scale(1.1) !important;
+}
+
+.video-page {
+  display: flex;
+  flex-direction: column;
 }
